// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render должен вернуть листинг с данными 1`] = `
<table
  cellPadding={0}
  cellSpacing={0}
  className="CallsNumbersTable"
>
  <thead>
    <tr>
      <th
        className="CallsNumbersTable__headerCell CallsNumbersTable__headerCell_original"
      >
        Номер салона
      </th>
      <th
        className="CallsNumbersTable__headerCell CallsNumbersTable__headerCell_redirect"
      >
        Подменный номер
      </th>
      <th
        className="CallsNumbersTable__headerCell"
      >
        Цель
      </th>
    </tr>
  </thead>
  <tbody>
    TableRow
    TableRow
    TableRow
    TableRow
  </tbody>
</table>
`;

exports[`render должен вернуть пустой листинг 1`] = `
<table
  cellPadding={0}
  cellSpacing={0}
  className="CallsNumbersTable"
>
  <thead>
    <tr>
      <th
        className="CallsNumbersTable__headerCell CallsNumbersTable__headerCell_original"
      >
        Номер салона
      </th>
      <th
        className="CallsNumbersTable__headerCell CallsNumbersTable__headerCell_redirect"
      >
        Подменный номер
      </th>
      <th
        className="CallsNumbersTable__headerCell"
      >
        Цель
      </th>
    </tr>
  </thead>
  <tbody>
    EmptyRow
  </tbody>
</table>
`;

exports[`renderEmptyRow: должен вернуть элемент-плейсхолдер 1`] = `
<tr
  className="CallsNumbersTable__emptyRow"
>
  <td
    colSpan={3}
  >
    <div
      className="CallsNumbersTable__emptyInner"
    >
      <div
        className="CallsNumbersTable__emptyTitle"
      >
        Подменные номера отсутствуют
      </div>
      <div
        className="CallsNumbersTable__emptyDescription"
      >
        Как только кто-то из пользователей посмотрит контактные данные на ваших объявлениях, мы выдадим подменный номер и отобразим его на этой странице.
      </div>
    </div>
  </td>
</tr>
`;

exports[`renderTableRow должен вернуть элемент списка 1`] = `
<tr
  className=""
>
  <td
    className="CallsNumbersTable__cell"
  >
    <div
      className="CallsNumbersTable__cellInner"
    >
      <CopyableTextWithTooltip
        onCopy={[Function]}
        text="+79154950272"
        textName="Номер"
      />
    </div>
  </td>
  <td
    className="CallsNumbersTable__cell"
  >
    <div
      className="CallsNumbersTable__cellInner"
    >
      <CopyableTextWithTooltip
        onCopy={[Function]}
        text="+79160396892"
        textName="Номер"
      />
    </div>
  </td>
  <td
    className="CallsNumbersTable__cell"
  >
    <div
      className="CallsNumbersTable__cellInner"
    >
      <div
        className="CallsNumbersTable__platform"
      >
        Авто.ру
      </div>
    </div>
  </td>
  <td
    className="CallsNumbersTable__cell"
  >
    <div
      className="CallsNumbersTable__cellInner"
    >
      offerDescription
    </div>
  </td>
  <td
    className="CallsNumbersTable__cell"
  >
    <div
      className="CallsNumbersTable__cellInner"
    >
      Кнопка
    </div>
  </td>
</tr>
`;

exports[`renderTargetCell должен вернуть Легковые автомобили, если передана категория CARS, но не передана секция 1`] = `"Легковые автомобили"`;

exports[`renderTargetCell должен вернуть название категории и секцию 1`] = `"Легковые с пробегом"`;

exports[`renderTargetCell должен вернуть название категории и ссылку на оффер 1`] = `
<React.Fragment>
  <div>
    Легковые с пробегом
  </div>
  <Link
    target="_blank"
    url="link/card/?category=cars&section=used&mark=KIA&model=RIO&sale_id=1101642996&sale_hash=180ab80f"
  >
    Kia Rio
  </Link>
</React.Fragment>
`;

exports[`renderTargetCell должен вернуть только название категории 1`] = `"Мото"`;
